@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.7
 #
 
+2004-12-22 19:36:07 GMT	John Goerzen <jgoerzen@complete.org>	patch-146
+
+    Summary:
+      Fixed passive mode basics
+    Revision:
+      missingh--head--0.7--patch-146
+
+
+    modified files:
+     ChangeLog libsrc/MissingH/Network/FTP/ParserClient.hs
+
+
 2004-12-22 19:30:28 GMT	John Goerzen <jgoerzen@complete.org>	patch-145
 
     Summary:
